Fixed attributes wrong index. New look of scrollbar.

--- a/MYCareerWEB/wwwroot/css/app.css
+++ b/MYCareerWEB/wwwroot/css/app.css
@@ -221,3 +221,23 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 img {
     -webkit-user-drag: none;
 }
+
+*::-webkit-scrollbar {
+    width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+    height: 56px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: darkorange;
+}
+
+    *::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+    }
